# Crypton-DI

./: .gitignore  DEV_STATUS.md  README.md  deploy-prod.ps1  deploy-staging.ps1  dev.env.example  package-lock.json  package.json  start-all.ps1  start-demo.ps1  status.ps1  stop-all.ps1
docs/sdk/: sdk-launch-plan.md
graphify-out/: .graphify_detect.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/: docker-compose.yml
libs/crypton-sdk/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
libs/crypton-sdk/src/: client.ts  errors.ts  index.ts  session.ts
risk-engine/: CHANGELOG.md  Cargo.toml  README.md  RUNBOOK.md  SIMULATION_GUIDE.md  TESTING_GUIDE.md  failed_scenario.md  log.txt  test_results.md
risk-engine/.cargo/: config.toml
risk-engine/benches/: engine_evaluate.rs
risk-engine/src/: adapter.rs  config.rs  context.rs  decision.rs  enrichment.rs  error.rs  lib.rs  policy_config.rs  policy_overrides.rs  rate_limit.rs  shadow.rs  store.rs
risk-engine/src/adapters/: axum_server.rs  fred_rate_limit.rs  fred_store.rs  metrics.rs  mod.rs  sqlx_loader.rs
risk-engine/src/engine/: escalation.rs  mod.rs
risk-engine/src/org_graph/: cluster.rs  graph.rs  mod.rs  recompute.rs  scoring.rs  tenant.rs  union_find.rs  worker.rs
risk-engine/src/policy/: hard_gates.rs  mod.rs
risk-engine/src/scoring/: correlation.rs  device.rs  mod.rs  network.rs  session.rs  velocity.rs
risk-engine/src/signals/: breach.rs  client_sdk.rs  disposable_email.rs  fingerprint.rs  geo.rs  geoip.rs  ip_reputation.rs  metrics.rs  mod.rs  sanctions.rs
risk-engine/tests/: active_tests.rs  axum_server.rs  engine_integration.rs  golden.rs  helpers.rs  logged_tests.rs  playground.rs  property.rs  shadow.rs  simulation.rs  tenant_policy.rs
risk-engine/tests/snapshots/: golden__g_account_locked.snap  golden__g_ato_cluster_pattern.snap  golden__g_automation_on_register.snap  golden__g_breached_credential_on_sensitive.snap  golden__g_brute_force_login.snap  golden__g_clean_device_list.snap  golden__g_clean_login.snap  golden__g_clean_register.snap  golden__g_credential_cloner.snap  golden__g_expired_jwt_on_sensitive.snap  golden__g_headless_ua_on_cloud.snap  golden__g_impossible_travel_no_tor.snap  golden__g_impossible_travel_via_tor.snap  golden__g_ip_abuse_heavily_reported.snap  golden__g_jwt_mismatch_non_sensitive.snap  golden__g_jwt_mismatch_sensitive.snap  golden__g_lost_credential.snap  golden__g_moderate_velocity_login.snap  golden__g_no_escalation_on_clean_history.snap  golden__g_nonce_replay.snap  golden__g_oauth_ip_mismatch.snap  golden__g_org_elevated_moderate_velocity.snap  golden__g_org_under_attack_amplifies_velocity.snap  golden__g_privileged_on_fresh_credential.snap  golden__g_rapid_registration_from_hosting.snap  golden__g_recovery_complete_without_pending.snap  golden__g_redis_degraded_non_sensitive_allows.snap  golden__g_redis_degraded_sensitive_forces_challenge.snap  golden__g_repeated_challenges_escalate_to_hold.snap  golden__g_revoked_credential.snap  golden__g_rfc1918_trusted_login.snap  golden__g_sanctioned_country.snap  golden__g_shadow_session.snap  golden__g_sign_count_rollback.snap  golden__g_tor_on_recovery.snap  golden__g_tor_on_sensitive.snap  golden__g_vpn_geo_jump_login.snap  golden__g_vpn_on_critical_action.snap
services/: .env.example
services/crypton-admin/: .env  .env.example  package-lock.json  package.json
services/crypton-admin/public/: index.html  manifest.json
services/crypton-admin/src/: App.js  AppShell.js  AuditLogs.js  Buttons.js  Dashboard.js  Devices.js  Landing.js  Login.js  OrgSettings.js  PolicyEngine.js  ProtectedActions.js  RBAC.js  Recovery.js  Register.js  RiskIntel.js  Sessions.js  api.js  auth.js  auth.regression-1.test.js  config.js  constants.js  index.css  routes.js  sdk.js  webauthn.js
services/crypton-demo/: .env.example  Dockerfile  package-lock.json  package.json  server.js  tsconfig.json  vercel.json
services/crypton-demo/public/: index.html  manifest.json
services/crypton-demo/src/: Admin.js  AdminDashboard.js  AdminLogin.js  AnimatedHeading.js  App.js  AppShell.js  AttackSim.js  AuditLogs.js  AuthContext.js  Dashboard.js  Devices.js  Landing.js  Login.js  OrgSettings.js  PanelWall.js  (+15 more)
services/crypton-gateway/: .env.example  Cargo.toml  Dockerfile  README.md  log.txt
services/crypton-gateway/src/: main.rs  state.rs
services/crypton-gateway/src/audit/: ingest.rs  mod.rs
services/crypton-gateway/src/middleware/: auth.rs  mod.rs  nonce.rs  policy.rs  rate_limit.rs
services/crypton-gateway/src/routes/: diagnostics.rs  metrics.rs  mod.rs  proxy.rs
services/crypton-id/: .env.example  .env.production.example  .env.staging.example  Cargo.toml  Dockerfile  run.bat  start.sh  test-webauthn.html
services/crypton-id/migrations/: 001_init.sql  003_nullable_public_key.sql  004_status_constraint.sql  006_add_user_agent.sql  007_add_lost_status.sql  009_auth_boundaries.sql
services/crypton-id/src/: audit.rs  config.rs  error.rs  jwt.rs  state.rs
services/crypton-id/src/redis/: challenges.rs  mod.rs  sessions.rs
services/crypton-id/src/routes/: actions.rs  audit_logs.rs  auth_webauthn.rs  contact.rs  devices.rs  mod.rs  oauth.rs  recovery.rs  secure.rs  stubs.rs
services/crypton-identity/: .env  Cargo.toml  dev-tunnel.ps1  run-dev.ps1  server.js  test-webauthn.html
services/crypton-identity/.cargo/: config.toml
services/crypton-identity/migrations/: 002_add_passkey_column.sql  005_audit_logs.sql  008_recovery_requests.sql
services/crypton-identity/src/: app.rs  config.rs  error.rs  jwt.rs  main.rs  state.rs
services/crypton-identity/src/db/: models.rs
services/crypton-identity/src/redis/: challenges.rs  mod.rs
services/crypton-identity/src/routes/: actions.rs  audit_logs.rs  auth_webauthn.rs  devices.rs  health.rs  mod.rs  oauth.rs  recovery.rs  secure.rs  stubs.rs
services/crypton-main/: .env.example  package-lock.json  package.json
services/demo-site/: package-lock.json  package.json  server.js
src/: App.js
(+26 files in other folders)
