[package]
name = "crypton-gateway"
version = "0.1.0"
authors = ["Person 2 <person2@example.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["headers", "json"] }
axum-extra = { version = "0.7", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "0.14", features = ["client", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", features=["tokio-comp"] }
jsonwebtoken = "8.4"
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
sqlx = { version = "0.6", features = ["postgres","runtime-tokio-rustls","macros"] }
uuid = { version = "1", features = ["serde","v4"] }

# optional tooling
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
