[package]
name = "crypton-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum        = "0.7"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

# HTTP client (for proxying to identity)
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Byte buffers
bytes       = "1"

# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# Middleware
tower-http  = { version = "0.6", features = ["trace"] }

# Utilities
anyhow      = "1"
dotenvy     = "0.15"
