[package]
name = "crypton-identity"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

axum-server = { version = "0.7", features = ["tls-rustls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

async-trait = "0.1"
dotenvy = "0.15"
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate", "json"] }
redis = { version = "0.26", features = ["tokio-comp"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = { version = "0.5", features = [] }

webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
jsonwebtoken = "9"
url = "2"
openssl = "0.10"
